[package]
name = "asteroids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic", "wayland"]}
bevy_rapier2d = "0.16.0"
bevy-inspector-egui-rapier = { version = "0.5.0", features = ["rapier2d"] }
bevy-inspector-egui = "0.12.1"
rand = "0.8.5"